--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -56,12 +56,13 @@ header a {
   color: #555
 }
 .idea-details span {
-  position: inherit;
+  position: absolute;
   top: 20px;
   right: 20px;
   cursor: pointer;
   background: #f1f1f1;
   padding: 6px;
+  border-radius: 50%;
   color: #333;
 }
 
@@ -93,4 +94,7 @@ div.error {
   color: var(--error);
   border-radius: 4px;
   margin: 20px 0;
+}
+input.error {
+  border: 1px solid var(--error);
 }
